fix typo, and refresh swagger
