# docs/swagger.json
@@ -93,6 +93,28 @@
                 "responses": {}
             }
         },
+        "/api/categories/{id}/produk": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "product"
+                ],
+                "summary": "Daftar Semua Produk berdasarkan kategori ID",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Product"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/product": {
             "get": {
                 "produces": [
@@ -240,6 +262,9 @@
         "models.Product": {
             "type": "object",
             "properties": {
+                "category_id": {
+                    "type": "integer"
+                },
                 "id": {
                     "type": "integer"
                 },
